# hypermedia

./: Cargo.toml  contacts.sr  flake.nix  treefmt.nix
assets/: style.css  table.css
src/: contact.rs  data.rs  lib.rs  main.rs  persistence.rs  route_data.rs  routes.rs  templates.rs
src/routes/: add_contact.rs  add_contact_types.rs  contacts.rs  view_contact.rs
templates/: base.html  contacts.html  new.html  style.css  view.html
